--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cucumber-js --require-module ts-node/register --require features/**/*.ts --format @cucumber/pretty-formatter"
+    "test": "cucumber-js --require-module ts-node/register --require features/**/*.ts --format json:report/report.json",
+    "report": "node generate-report.js",
+    "test:with-report": "npm test && npm run report",
+    "generate-report": "allure generate allure-results --clean -o allure-report",
+    "open-report": "allure open allure-report"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +18,11 @@
     "@cucumber/cucumber": "^11.2.0",
     "@cucumber/pretty-formatter": "^1.0.1",
     "@playwright/test": "^1.52.0",
+    "cucumber-html-reporter": "^6.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "allure-cucumberjs": "^3.2.1"
   }
 }
