Update scripts test

--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-"test": "cucumber-js --require-module ts-node/register --require features/**/*.ts --format json:report/report.json",
-
+    "test": "cucumber-js features/**/*.feature --require-module ts-node/register --require features/support/*.ts --require features/**/step_definitions/*.ts --format json:report/report.json",
     "report": "node generate-report.js",
-    "test:with-report": "npm test && npm run report",
-    "generate-report": "allure generate allure-results --clean -o allure-report",
-    "open-report": "allure open allure-report"
+    "test:with-report": "npm test && npm run report"
   },
   "keywords": [],
   "author": "",
