Update file conf

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cucumber-js --require-module ts-node/register --require features/support/*.ts --require features/**/step_definitions/*.ts features/**/*.feature",
+    "test": "cucumber-js",
     "report": "node generate-report.js",
     "test:with-report": "npm test && npm run report"
   },
