--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "cucumber-js",
     "report": "node generate-report.js",
-    "test:with-report": "npm test && npm run report"
+    "test:with-report": "npm test && npm run report",
+    "report-allure": "allure generate ./allure-results -o ./allure-report --clean && allure open ./allure-report"
   },
   "keywords": [],
   "author": "",
@@ -16,11 +17,12 @@
     "@cucumber/cucumber": "^11.2.0",
     "@cucumber/pretty-formatter": "^1.0.1",
     "@playwright/test": "^1.52.0",
+    "allure-commandline": "^2.34.0",
+    "allure-cucumberjs": "^3.2.1",
     "cucumber-html-reporter": "^6.0.0",
+    "playwright": "^1.52.0",
+    "playwright-core": "^1.52.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
-  },
-  "dependencies": {
-    "allure-cucumberjs": "^3.2.1"
   }
 }
