--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "cucumber-js",
     "report": "node generate-report.js",
-    "test:with-report": "npm test && npm run report",
-    "report-allure": "allure generate ./allure-results -o ./allure-report --clean && allure open ./allure-report"
+    "test:report": "npm test && npm run report"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +16,7 @@
     "@cucumber/cucumber": "^11.2.0",
     "@cucumber/pretty-formatter": "^1.0.1",
     "@playwright/test": "^1.52.0",
-    "allure-commandline": "^2.34.0",
-    "allure-cucumberjs": "^3.2.1",
+    "cross-env": "^7.0.3",
     "cucumber-html-reporter": "^6.0.0",
     "playwright": "^1.52.0",
     "playwright-core": "^1.52.0",
